--- a/src/component/Pages/Nav/Nav.css
+++ b/src/component/Pages/Nav/Nav.css
@@ -178,19 +178,18 @@
 
 @media (max-width: 576px) {
   .navbar-toggler {
-    /* position: ; */
-    top: 16px;
-    left: 20px;
-    z-index: 100; /* Ensure the button is above other elements */
-    background-color: #fff; /* Optional: Set a background color */
-    border: none; /* Optional: Remove border if any */
-  }
-
-  .buttonLan,
-  .slash {
-    display: none;
-  }
-
+    top: 26px;
+    left: 10px;
+    z-index: 10000;
+    background-color: #fff;
+    border: none;
+    margin-left: 78%;
+    position: absolute;
+}
+  
+.navv{
+  display: inline-table !important;
+}
   .navbar-collapse {
     position: absolute;
     top: 0px;
@@ -207,4 +206,54 @@
     background-position: center;
     background-repeat: no-repeat;
   }
+
+  .mainContent {
+    color: white;
+    font-size: 26px !important;
+    position: absolute;
+    background: rgba(45, 45, 45, 0.6);
+    padding: 17px 44px 0px;
+    margin: 30% 0% 0% 7%;
+    border-radius: 36px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+.highlighttxt {
+  color: red;
+  font-size: 30px !important;
+}
+
+
+.subContent {
+  color: white;
+  font-size: 20px !important;
+  position: absolute;
+  background: rgba(45, 45, 45, 0.6);
+  padding: 11px 32px 0px;
+  margin: 57% 8%;
+  border-radius: 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+.logosushi {
+  position: absolute;
+  bottom: 59px;
+  right: 0px;
+  height: 138px;
+  width: 177px;
+}
+
+.NavMain {
+  position: relative;
+  width: 100%;
+  height: 80vh;
+  overflow: hidden;
+}
+
+
+
+  
 }
