--- a/src/component/Pages/Home/Home.css
+++ b/src/component/Pages/Home/Home.css
@@ -61,41 +61,44 @@
 }
 
 @media (max-width: 576px) {
-
-.cheff {
-    width: 100%;
-    height: 40vh;
-    background-position: center;
-    background-size: contain;
-}
-
-.cheffContent {
-    position: absolute;
-    top: 53%;
-    right: 5%;
-    transform: translateY(-50%);
-    color: white;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 14px;
-    width: 45%;
-    font-weight: 600;
-    text-align: center;
-    background: rgba(46, 46, 46, 0.8);
-    padding: 12px;
-    border-radius: 20px;
-}
-
-.homeMain {
-    background-color: #2d2d2d;
-    height: 379vh;
-    width: 100% !important;
-    display: flex;
-    /* flex-direction: column; */
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-}
-
-
-
-}
+    .cheff {
+      width: 100%;
+      height: 40vh;
+      background-position: center;
+      background-size: contain;
+    }
+  
+    .cheffContent {
+        top: 50%;
+        font-size: 13px;
+        width: 45%;
+        padding: 12px;
+    }
+  
+    .leftContent {
+        padding: 40px 40px;
+        margin: 10% 0%;
+    }
+  
+    .title {
+      font-size: 30px !important;
+    }
+  
+    .ptxt {
+      font-size: 14px !important;
+    }
+  
+    .nigirisushi {
+      width: 100%;
+      margin-top: 7%;
+    }
+  
+    .homeMain {
+      height: auto;
+    }
+  
+    .row {
+      margin-bottom: 30px;
+    }
+  }
+  
