--- a/src/component/Pages/Atmosphere/Atmosphere.css
+++ b/src/component/Pages/Atmosphere/Atmosphere.css
@@ -61,3 +61,11 @@
     border: 2px solid grey;
     margin-left: -5%;
   }
+  
+
+  @media (max-width: 576px) {
+.atmoshpereMain{
+  display: none;
+}
+
+  }
