--- a/src/component/Pages/Home/Home.css
+++ b/src/component/Pages/Home/Home.css
@@ -76,16 +76,18 @@
     }
   
     .leftContent {
-        padding: 40px 40px;
-        margin: 10% 0%;
-    }
+      padding: 30px 40px;
+      margin: 7% 0%;
+  }
   
     .title {
       font-size: 30px !important;
+      text-align: center;
     }
-  
+ 
     .ptxt {
-      font-size: 14px !important;
+      font-size: 16px !important;
+      text-align: center;
     }
   
     .nigirisushi {
